# scrip

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/scrip/: __init__.py  constants.py  core.py  file_utils.py  flattener.py  main.py  parser.py  restorer.py
tests/: debug_newlines.py  test_basic.py  test_core.py
